# amqp_opensuse_async

./: amqp_listen.py  pyproject.toml  readme.rst
